[gd_scene load_steps=7 format=3 uid="uid://q5ylft7s4bca"]

[ext_resource type="PackedScene" uid="uid://hdkw7k5hewjh" path="res://Src/Entities/FpPlayer/FpCamera/FpCamera.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bn3et1mo1k5d0" path="res://Src/Entities/FpPlayer/FpHud/FpHud.tscn" id="2"]
[ext_resource type="Script" path="res://Src/Entities/FpPlayer/FpMovement.gd" id="3"]
[ext_resource type="Script" path="res://Src/Entities/FpPlayer/FpInput.gd" id="4"]
[ext_resource type="Script" path="res://Src/Entities/FpPlayer/FpPlayer.gd" id="5"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.3
height = 1.2

[node name="FpPlayer" type="CharacterBody3D"]
script = ExtResource("5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.9, 0)
shape = SubResource("1")

[node name="FpInput" type="Node" parent="."]
script = ExtResource("4")

[node name="FpMovement" type="Node" parent="."]
script = ExtResource("3")

[node name="FpCamera" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="FpHud" parent="." instance=ExtResource("2")]
